--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://47.100.7.15:3306/cloud_disk?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
+jdbc.url=jdbc:mysql://localhost:3306/cloud_disk?serverTimezone=UTC&useUnicode=true&characterEncoding=utf8
 jdbc.username=root
 jdbc.password=123456
